--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="10">
       <tr>
-        <td><img src="Image/fake-human-circle-img.png" alt=""></td>
+        <td><img src="fake-human-circle-img.png" alt=""></td>
         <td><h1>Nilima Patil</h1>
         <p><em>I am a <strong>Student.</strong></em></p>
         <p>I am a web developer.I love coffee.</p></td>
